fix(api): grant complete battle rewards
